<resources>
    <string name="app_name">Resistor</string>
    <string name="action_settings">Settings</string>
    <string name="resLeft">Left</string>
    <string name="bandOne">BandOne</string>
    <string name="bandTwo">BandTwo</string>
    <string name="bandThree">BandThree</string>
    <string name="spacer">Spacer</string>
    <string name="tolerance">Tolerance</string>
    <string name="resRight">Right</string>
    <string name="res_value">Resistor value</string>
    <string name="darkModeSummary">Make the background darker</string>
    <string name="darkModeTitle">Dark Mode</string>
    <string name="boldTextSummary">Make text bold</string>
    <string name="boldTextTitle">Bold Text</string>

    <string-array name="picker_one">
        <item>Brown</item>
        <item>Red</item>
        <item>Orange</item>
        <item>Yellow</item>
        <item>Green</item>
        <item>Blue</item>
        <item>Violet</item>
        <item>Grey</item>
        <item>White</item>
    </string-array>

    <string-array name="picker_two">
        <item>Black</item>
        <item>Brown</item>
        <item>Red</item>
        <item>Orange</item>
        <item>Yellow</item>
        <item>Green</item>
        <item>Blue</item>
        <item>Violet</item>
        <item>Grey</item>
        <item>White</item>
    </string-array>

    <string-array name="picker_multiplier">
        <item>Black</item>
        <item>Brown</item>
        <item>Red</item>
        <item>Orange</item>
        <item>Yellow</item>
        <item>Green</item>
        <item>Blue</item>
        <item>Violet</item>
        <item>Grey</item>
        <item>White</item>
        <item>Gold</item>
        <item>Silver</item>
    </string-array>

    <string-array name="picker_tolerance">
        <item>Brown</item>
        <item>Red</item>
        <item>Orange</item>
        <item>Yellow</item>
        <item>Green</item>
        <item>Blue</item>
        <item>Violet</item>
        <item>Grey</item>
        <item>Gold</item>
        <item>Silver</item>
    </string-array>
</resources>
